Altered styling again

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -115,6 +115,10 @@ ul li img:hover {
     body {
         overflow: scroll;
     }
+
+    .main {
+        transform: translateY(3%);
+    }
 }
 
 @media only screen and (max-width: 509px) {
